--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>frontend development</h1>
-    <a href ="https://en.wikipedia.org/wiki/HTML"> <img src ="assest/html.png" width ="20%"></a>
+    <a href ="https://en.wikipedia.org/wiki/HTML"> <img src ="html.png" width ="20%"></a>
     <a href = "https://en.wikipedia.org/wiki/CSS"><img src ="assest/css.png" width ="20%">
     </a>
     <a href ="https://en.wikipedia.org/wiki/Bootstrap_%28front-end_framework%29"><img src ="assest/bootstrap.png" width ="20%"></a>
