--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <a href ="https://en.wikipedia.org/wiki/HTML"> <img src ="html.png" width ="20%"></a>
     <a href = "https://en.wikipedia.org/wiki/CSS"><img src ="css.png" width ="20%">
     </a>
-    <a href ="https://en.wikipedia.org/wiki/Bootstrap_%28front-end_framework%29"><img src ="assest/bootstrap.png" width ="20%"></a>
-    <a href ="https://en.wikipedia.org/wiki/JavaScript"> <img src ="assest/javascript.png" width="20%"></a>
-    <a href ="https://en.wikipedia.org/wiki/React_(JavaScript_library)"><img src = "assest/react.png" width ="17%"></a> 
+    <a href ="https://en.wikipedia.org/wiki/Bootstrap_%28front-end_framework%29"><img src ="bootstrap.png" width ="20%"></a>
+    <a href ="https://en.wikipedia.org/wiki/JavaScript"> <img src ="javascript.png" width="20%"></a>
+    <a href ="https://en.wikipedia.org/wiki/React_(JavaScript_library)"><img src = "react.png" width ="17%"></a> 
     <br>
     <hr>
     <h1>backend development</h1>
-    <a href ="assest/ajax.png" download=""><img src ="./assest/ajax.png" width="20%"></a>
-    <a href ="assest/json.png" download=""><img src = "./assest/json.png" width ="20%"></a>
-    <a href ="assest/mysql.png" download=""><img src ="./assest/mysql.png" width = "20%"></a>
-    <a href = "assest/node js.jpg" download=""><img src ="./assest/node js.jpg" width = "20%"></a>
-    <a href = "assest/problem sloving.jpg" download=""><img src ="./assest/problem sloving.jpg" width ="17%"></a>
+    <a href ="assest/ajax.png" download=""><img src ="ajax.png" width="20%"></a>
+    <a href ="assest/json.png" download=""><img src = "json.png" width ="20%"></a>
+    <a href ="assest/mysql.png" download=""><img src ="mysql.png" width = "20%"></a>
+    <a href = "assest/node js.jpg" download=""><img src ="node js.jpg" width = "20%"></a>
+    <a href = "assest/problem sloving.jpg" download=""><img src ="problem sloving.jpg" width ="17%"></a>
  
     <br>
     <hr>
     <h1> Social Media</h1>
-    <a href ="tel:+9876543120"><img src="./assest/phone.png" width ="20%"></a>
-    <a href ="mailto:pakavamshi59@gmail.com"> <img src ="./assest/gmail.png" width="20%" ></a>
-    <a href ="https://wa.me/6303020064"><img src ="./assest/whatapp.png" width="20%"></a>
+    <a href ="tel:+9876543120"><img src="phone.png" width ="20%"></a>
+    <a href ="mailto:pakavamshi59@gmail.com"> <img src =".gmail.png" width="20%" ></a>
+    <a href ="https://wa.me/6303020064"><img src ="whatapp.png" width="20%"></a>
 </body>
 </html>
